--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "extend": "~1.2.1",
     "obj-case": "git://github.com/tedjt/obj-case",
     "flatnest": "git://github.com/tedjt/node-flatnest",
-    "angel.co": "~1.1.0"
+    "angel.co": "~1.1.0",
+    "levenshtein": "~1.0.4"
   },
   "devDependencies": {
     "mocha": "~1.15.1",
