--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "obj-case": "git://github.com/tedjt/obj-case",
     "flatnest": "git://github.com/tedjt/node-flatnest",
     "angel.co": "~1.1.0",
-    "levenshtein": "~1.0.4"
+    "levenshtein": "~1.0.4",
+    "request": "~2.34.0",
+    "cheerio": "~0.13.1",
+    "defaults": "~1.0.0"
   },
   "devDependencies": {
     "mocha": "~1.15.1",
